# hm-automation

./: .gitignore  .pre-commit-config.yaml  Automation.bat  Automation.py  Elements.json  HTML.html.template  Makefile  README.md  config.yaml  conftest.py  pyproject.toml  requirements.txt  server.py  setup.cfg  visual.py
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  pr.yaml
src/choice_dtc/: browser.py  census.py  choice_dtc_action_series.py  choice_dtc_actions.py  data.py  demographics.py  image.py  modal.py  quotes.py
src/common/: browser.py  log.py  utils.py
src/lib/: SOAP.py  actions.py  base.py  browser.py  checkEmail.py  checkPdf.py  config.py  elements.py  fmanager.py  generateHtml.py  generateXml.py  imgdiff.py  log.py  parser.py  prep.py  procreate.py  remote.py  report.py
src/templates/: _baa.py  _customized_quote.py  _dtc.py  _osign.py  _product_availability.py  _shopping_cart_quote.py  action_series.py
src/utils/: util.py  utils.py
tests/: conftest.py
tests/data/: choice_dtc.yaml
tests/data/test_files/: FIPS Zipcodes Most popular STM Plans.csv  FIPS Zipcodes Most popular STM Plans.xlsx  States.xlsx  US3915674_stm_most_popular_plans.xlsx  dbo.DTC_Top_Plan.csv  dbo.DTC_Top_Plan_xls.xlsx  stm_most_popular_plans.xlsx  stm_popular_plans.xlsx  test_lob.xlsx  test_smoke.xlsx  ~$stm_most_popular_plans.xlsx
tests/demo/: demo_lob.xlsx  demo_plan.xlsx  demo_smoke.xlsx  demo_test.py
tests/functional/: US3915674_STM_display_most_popular_plan_ribbon_front_end_test.py  demo_test.py  fips_test.py  sample_test.py
tests/functional/release_regression/: STM_release_regression_test.py
tests/scrum_and_coke/: choice_dtc.yaml  conftest.py
tests/scrum_and_coke/functional/: US_ACA_STM_test.py
tests/scrum_and_coke/gui/: US3888643_Show_HAP_logo_on_loading_page_test.py
tests/test_data/: test_aca_stm.xlsx
tests/unit/: top_level_test.py
