[tool.poetry]
name = "hm-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
pandas = "^1.4.0"
Pillow = "^9.0.1"
numpy = "^1.22.1"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
pytest-html = "^3.1.1"
flake8 = "^3.7"
pep8-naming = "^0.8.2"
black = "^18.3-alpha.0"
pytest-xdist = "^2.5.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"

[tool.black]
exclude = "/.venv/"
line-length = 120

[tool.pytest.ini_options]
python_files = "*_test.py"
python_functions = "test_*"
norecursedirs = "logs"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning"
    ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
